--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -826,12 +826,13 @@
         <item name="android:gravity">center</item>
     </style>
 
-    <style name="TabIndicatorHoloStyle">
+    <style name="TabIndicatorHoloStyle" parent="Shadowless">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:gravity">center</item>
         <item name="android:textSize">11sp</item>
         <item name="android:singleLine">true</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="TabIndicatorHoloStyle.Title">
@@ -841,7 +842,6 @@
     </style>
 
     <style name="TabIndicatorHoloStyle.Counter">
-        <item name="android:textStyle">bold</item>
         <item name="android:layout_weight">0</item>
         <item name="android:paddingLeft">8dp</item>
         <item name="android:textColor">@color/tab_counter_color</item>
