#33986: create custom autoCompleteTextView

--- a/src/main/res/layout/ac_filter_light_theme.xml
+++ b/src/main/res/layout/ac_filter_light_theme.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:my="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
@@ -15,14 +16,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <com.topface.topface.ui.views.CustomCitySearchView
-                android:id="@+id/loFilterCitySearchView"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:background="@drawable/input_field" />
-
             <Spinner
                 android:id="@+id/loFilterSex"
                 style="@style/FilterSpinner"
@@ -37,6 +30,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
                     android:orientation="vertical">
 
                     <LinearLayout
@@ -57,15 +52,16 @@
                             android:layout_marginRight="0dp" />
                     </LinearLayout>
 
-                    <EditText
-                        android:id="@+id/loFilterCity"
+                    <com.topface.topface.ui.views.CustomCitySearchView
+                        android:id="@+id/loFilterChooseCity"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="16dp"
                         android:layout_marginTop="28dp"
                         android:background="@drawable/input_field"
                         android:hint="@string/general_city"
-                        android:textColorHint="#8A8A8A" />
+                        android:textColorHint="#8A8A8A"
+                        my:request_key="CITY_SEARCH_FROM_FILTER_ACTIVITY" />
 
                 </LinearLayout>
 
@@ -134,5 +130,5 @@
     <FrameLayout
         android:id="@+id/loFrame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></FrameLayout>
+        android:layout_height="match_parent" />
 </RelativeLayout>
