--- a/src/main/res/layout/dating_lock_popup.xml
+++ b/src/main/res/layout/dating_lock_popup.xml
@@ -4,10 +4,10 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_centerVertical="true"
-    android:fadingEdge="none"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    android:fadingEdge="none">
 
-    <LinearLayout
+<LinearLayout
         android:id="@+id/root"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
