--- a/src/main/res/layout/dating_lock_popup.xml
+++ b/src/main/res/layout/dating_lock_popup.xml
@@ -4,8 +4,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_centerVertical="true"
-    android:fadingEdge="none"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    android:fadingEdge="none">
 
     <LinearLayout
         android:id="@+id/root"
