--- a/src/main/res/drawable/bg_left_menu_item_selector.xml
+++ b/src/main/res/drawable/bg_left_menu_item_selector.xml
@@ -3,11 +3,12 @@
 
     <!--<item android:state_selected="true" android:drawable="@drawable/bg_left_menu_pressed" />-->
 
-    <item android:state_pressed="true" android:drawable="@drawable/bg_left_menu_pressed" />
+    <item android:state_pressed="true" android:drawable="@color/bg_left_menu" />
 
-    <item android:state_focused="true" android:drawable="@drawable/bg_left_menu_pressed" />
+    <item android:state_focused="true" android:drawable="@color/bg_left_menu" />
 
-    <item android:state_selected="true" android:drawable="@drawable/bg_left_menu_pressed" />
+    <item android:state_selected="true" android:drawable="@color/bg_left_menu" />
+
 
     <item android:drawable="@drawable/bg_left_menu_item" />
 
