--- a/src/main/res/layout/fragment_menu.xml
+++ b/src/main/res/layout/fragment_menu.xml
@@ -12,7 +12,7 @@
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@color/bg_left_menu"
+        android:background="@color/bg_left_menu_not_clicked"
         android:divider="@null"
         android:dividerHeight="0dp"
         android:fadingEdgeLength="20dp"
