--- a/src/main/res/layout/item_feed_layout_heart.xml
+++ b/src/main/res/layout/item_feed_layout_heart.xml
@@ -17,6 +17,7 @@
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/ifp_avatar"
         android:layout_toLeftOf="@+id/ifp_heart"
+        android:paddingBottom="1dp"
         android:orientation="vertical">
 
         <include
