--- a/src/main/res/layout/item_feed_layout_time_count.xml
+++ b/src/main/res/layout/item_feed_layout_time_count.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@id/ifp_avatar"
+        android:paddingBottom="1dp"
         android:orientation="vertical">
 
         <LinearLayout
