--- a/src/main/res/layout/btn_double_big.xml
+++ b/src/main/res/layout/btn_double_big.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="12sp"
-            style="@style/ShadowItemFont" />
+            style="@style/NoShadowItemFont" />
 
         <RadioButton
             android:id="@+id/dblRight"
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="12sp"
-            style="@style/ShadowItemFont" />
+            style="@style/NoShadowItemFont" />
 
     </RadioGroup>
 </merge>
