--- a/src/main/res/layout/btn_triple.xml
+++ b/src/main/res/layout/btn_triple.xml
@@ -9,7 +9,7 @@
 
         <RadioButton
             android:id="@+id/trplLeft"
-            style="@style/ShadowItemFont"
+            style="@style/NoShadowItemFont"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_triple_left_selector"
@@ -22,7 +22,7 @@
 
         <RadioButton
             android:id="@+id/trplMiddle"
-            style="@style/ShadowItemFont"
+            style="@style/NoShadowItemFont"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_triple_middle_selector"
@@ -35,7 +35,7 @@
 
         <RadioButton
             android:id="@+id/trplRight"
-            style="@style/ShadowItemFont"
+            style="@style/NoShadowItemFont"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_triple_right_selector"
