--- a/src/main/res/layout/leaders.xml
+++ b/src/main/res/layout/leaders.xml
@@ -4,35 +4,33 @@
     android:id="@+id/leadersBlock"
     android:layout_width="fill_parent"
     android:layout_height="67dp"
-    android:paddingTop="6dp"
-    android:paddingBottom="4dp"
     android:background="@color/bg_leaders_block"
+    android:paddingBottom="4dp"
+    android:paddingTop="6dp"
     android:visibility="gone">
 
     <com.topface.topface.ui.blocks.HorizontalListView
         android:id="@+id/leadersList"
-        android:layout_height="wrap_content"
         android:layout_width="fill_parent"
-        android:cacheColorHint="#0000"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="-14dp"
         android:layout_toRightOf="@+id/leadersDateBtn"
-        android:layout_centerVertical="true" />
+        android:cacheColorHint="#0000" />
 
     <Button
         android:id="@id/leadersDateBtn"
-        android:layout_height="55.5dp"
+        style="@style/NoShadowItemFont"
         android:layout_width="wrap_content"
+        android:layout_height="55.5dp"
+        android:layout_marginLeft="5dp"
         android:background="@drawable/btn_leaders_date_selector"
-        android:text="@string/leaders_go_date"
-        android:textSize="11sp"
-        android:textScaleX="0.9"
-        android:textColor="#FFFFFF"
-        android:shadowDy="-1"
-        android:shadowColor="#444444"
-        android:shadowRadius="1"
         android:gravity="left|center_vertical"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:layout_marginLeft="5dp" />
+        android:text="@string/leaders_go_date"
+        android:textColor="#FFFFFF"
+        android:textScaleX="0.9"
+        android:textSize="11sp" />
 
 </RelativeLayout>
