--- a/src/main/res/layout/dating_user_info.xml
+++ b/src/main/res/layout/dating_user_info.xml
@@ -1,18 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- User info -->
+<?xml version="1.0" encoding="utf-8"?><!-- User info -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-  <TextView
+
+    <TextView
         android:id="@+id/tvDatingUserStatus"
+        style="@style/NoShadowItemFont"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ellipsize="end"
-        android:shadowColor="#666666"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1.2"
         android:textColor="#FFFFFF"
         android:textSize="14sp" />
 </RelativeLayout>
