--- a/src/main/res/layout/fragment_form.xml
+++ b/src/main/res/layout/fragment_form.xml
@@ -18,7 +18,7 @@
 
         <TextView
             android:id="@+id/tvTitle"
-            style="@style/ShadowUserText"
+            style="@style/NoShadowItemFont"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
