--- a/src/main/res/layout/item_user_list.xml
+++ b/src/main/res/layout/item_user_list.xml
@@ -36,10 +36,7 @@
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:textColor="#111111"
-            android:shadowColor="#666666"
-            android:shadowRadius="1"
-            android:shadowDx="0"
-            android:shadowDy="1"
+           style="@style/NoShadowItemFont"
             android:textSize="12sp"
             android:layout_marginTop="4dp" />
 
