--- a/src/main/res/layout/popular_user_dialog.xml
+++ b/src/main/res/layout/popular_user_dialog.xml
@@ -13,8 +13,7 @@
         android:layout_centerHorizontal="true"
         style="@style/ItemTitleText"
         android:gravity="center"
-        android:shadowColor="#F2000000"
-        android:shadowDx="-1" />
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,9 +25,7 @@
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:textSize="13sp"
-        android:shadowColor="#F2000000"
-        android:shadowDx="-1"
-        android:shadowRadius="1" />
+        style="@style/NoShadowItemFont"/>
 
     <Button
         android:id="@+id/unlock_message_sent"
