--- a/src/main/res/drawable/list_item_bg_read_normal.xml
+++ b/src/main/res/drawable/list_item_bg_read_normal.xml
@@ -9,6 +9,8 @@
                 android:width="1dp"
                 android:color="@color/list_item_divider_normal"/>
 
+            <solid android:color="@color/list_item_read_normal"/>
+
             <padding
                 android:left="10dp"
                 android:right="12dp"
