--- a/src/main/res/layout/fragment_chat.xml
+++ b/src/main/res/layout/fragment_chat.xml
@@ -53,7 +53,7 @@
 
     <TextView
         android:id="@+id/tvBackgroundText"
-        style="@style/BackgroundFont"
+        style="@style/BackgroundFontShadowless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
