--- a/src/main/res/layout/fragment_feed.xml
+++ b/src/main/res/layout/fragment_feed.xml
@@ -19,7 +19,7 @@
 
         <TextView
             android:id="@+id/tvBackgroundText"
-            style="@style/BackgroundFont"
+            style="@style/BackgroundFontShadowless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -27,6 +27,7 @@
             android:gravity="center"
             android:minWidth="150dp"
             android:paddingRight="25dp"
+            android:alpha="0"
             android:maxLines="1" />
 
         <com.topface.PullToRefreshListView xmlns:p2r="http://schemas.android.com/apk/res-auto"
