--- a/src/main/res/layout/fragment_gifts_list.xml
+++ b/src/main/res/layout/fragment_gifts_list.xml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
-
-    <GridView
+<GridView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/giftsGrid"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:listSelector="@android:color/transparent"
-        android:background="#FFFFFF"
         android:fadingEdge="none"
         android:horizontalSpacing="0px"
         android:verticalSpacing="0px"
@@ -20,6 +14,3 @@
         android:stretchMode="columnWidth"
         android:columnWidth="110dp"
         android:fadeScrollbars="true" />
-
-
-</RelativeLayout>
