--- a/src/main/res/menu/actions_chat.xml
+++ b/src/main/res/menu/actions_chat.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+      xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:appcompat="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/action_profile"
         android:title="@string/profile_actions"
         appcompat:actionLayout="@layout/actionbar_item_profile"
-        appcompat:showAsAction="always"/>
+        appcompat:showAsAction="always"
+        tools:ignore="AlwaysShowAction"/>
     <item
         android:id="@+id/action_user_actions_list"
         android:icon="@drawable/user_profile_actions_button_selector"
         android:title="@string/profile_actions"
+        tools:ignore="AlwaysShowAction"
         appcompat:showAsAction="always"/>
 </menu>
