#34101 Поправлен баг из за которого при отправки подарка из конца списка отправлялся подарок из начала список. Вон экрана подарков перенесен в темы

--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -87,4 +87,9 @@
     <style name="Theme.Topface.Chat">
         <item name="android:windowBackground">@color/bg_holo</item>
     </style>
+
+    <style name="Theme.Topface.Gifts">
+        <item name="android:windowBackground">@color/bg_white</item>
+    </style>
+
 </resources>
