--- a/src/main/res/layout/ac_gifts.xml
+++ b/src/main/res/layout/ac_gifts.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:background="@color/bg_white">
+    android:layout_height="fill_parent">
 
 
-    <ImageView
+<ImageView
         android:id="@+id/giftHeaderDivider"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
