--- a/src/main/res/layout/ac_gifts.xml
+++ b/src/main/res/layout/ac_gifts.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent">
 
 
-<ImageView
+    <ImageView
         android:id="@+id/giftHeaderDivider"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -17,11 +17,11 @@
         android:layout_below="@id/giftHeaderDivider" />
 
     <RelativeLayout
+        android:id="@+id/lockScreen"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:layout_below="@id/giftHeaderDivider"
         android:background="@color/bg_main"
-        android:visibility="gone"
-        android:id="@+id/lockScreen"
-        android:layout_below="@id/giftHeaderDivider" />
+        android:visibility="gone" />
 
 </RelativeLayout>
