--- a/src/main/res/layout/ac_filter_light_theme.xml
+++ b/src/main/res/layout/ac_filter_light_theme.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:my="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
@@ -54,13 +54,9 @@
 
                     <com.topface.topface.ui.views.CitySearchView
                         android:id="@+id/loFilterChooseCity"
+                        style="@style/CitySearchView"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginTop="28dp"
-                        android:background="@drawable/input_field"
-                        android:hint="@string/general_city"
-                        android:textColorHint="#8A8A8A"
                         my:request_key="CITY_SEARCH_FROM_FILTER_ACTIVITY" />
 
                 </LinearLayout>
@@ -131,4 +127,4 @@
         android:id="@+id/loFrame"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</RelativeLayout>
+</FrameLayout>
