--- a/src/main/res/layout/dating_user_info.xml
+++ b/src/main/res/layout/dating_user_info.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?><!-- User info -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tvDatingUserStatus"
+    style="@style/NoShadowItemFont"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/tvDatingUserStatus"
-        style="@style/NoShadowItemFont"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:textColor="#FFFFFF"
-        android:textSize="14sp" />
-</RelativeLayout>
+    android:ellipsize="end"
+    android:textColor="#FFFFFF"
+    android:textSize="14sp" />
 
     
