--- a/src/main/res/layout/filter_dialog_layout.xml
+++ b/src/main/res/layout/filter_dialog_layout.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-
-    <ListView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:divider="@color/filter_fragment_divider_color"
-        android:dividerHeight="@dimen/filter_fragment_divider_height"
-        android:tag="loFilterList" />
-</LinearLayout>
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:divider="@color/filter_fragment_divider_color"
+    android:dividerHeight="@dimen/filter_fragment_divider_height"
+    android:tag="loFilterList" />
 
