--- a/src/main/res/layout/spinner_text_layout.xml
+++ b/src/main/res/layout/spinner_text_layout.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/NoShadowItemFont"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="#FFFFFF"
-    android:gravity="center_vertical"
-    android:singleLine="false"
-    android:tag="dropDownTextView"
-    android:textColor="#333333"
-    android:textSize="18sp" />
+    style="@style/SpinnerTextView"
+    android:background="@drawable/spinner_selector"
+    android:paddingBottom="15dp"
+    android:paddingLeft="8dp"
+    android:paddingTop="15dp" />
