--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -892,4 +892,26 @@
         <item name="android:dividerHeight">@dimen/filter_fragment_divider_height</item>
     </style>
 
+    <style name="SpinnerTextView" parent="NoShadowItemFont">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:tag">dropDownTextView</item>
+        <item name="android:textColor">#333333</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="CitySearchView" parent="SpinnerTextView">
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:layout_marginTop">28dp</item>
+        <item name="android:hint">@string/general_city</item>
+        <item name="android:textColorHint">#8A8A8A</item>
+        <item name="android:background">@drawable/input_field</item>
+    </style>
+
+    <style name="AutoCompleteTextViewStyle" parent="@style/Widget.AppCompat.AutoCompleteTextView">
+        <item name="android:textCursorDrawable" tools:ignore="NewApi">@null</item>
+        <item name="android:cursorVisible">true</item>
+    </style>
+
 </resources>
