--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -88,103 +88,19 @@
         <item name="android:gravity">center_vertical</item>
     </style>
 
-    <style name="ShadowItemFont">
-        <item name="android:shadowColor">#222222</item>
-        <item name="android:shadowRadius">1</item>
-        <item name="android:shadowDx">0</item>
-        <item name="android:shadowDy">-2</item>
-    </style>
-
-    <style name="NoShadowItemFont">
-        <item name="android:shadowColor">@null</item>
-        <item name="android:shadowRadius">0</item>
-        <item name="android:shadowDx">0</item>
-        <item name="android:shadowDy">0</item>
-    </style>
-
-    <style name="RedAlertTextShadow">
-        <item name="android:shadowColor">#350d0d</item>
-        <item name="android:shadowRadius">1</item>
-        <item name="android:shadowDx">0</item>
-        <item name="android:shadowDy">1</item>
-    </style>
-
-    <style name="ShadowItemFontBottom">
-        <item name="android:shadowColor">#222222</item>
-        <item name="android:shadowRadius">1</item>
-        <item name="android:shadowDx">0</item>
-        <item name="android:shadowDy">2</item>
-    </style>
-
-    <style name="ShadowButtonFont">
-        <item name="android:shadowColor">#222222</item>
-        <item name="android:shadowRadius">1</item>
-        <item name="android:shadowDx">1</item>
-        <item name="android:shadowDy">-2</item>
-    </style>
-
-    <style name="ShadowUserText">
-        <item name="android:shadowColor">#606060</item>
-        <item name="android:shadowRadius">1</item>
-        <item name="android:shadowDx">0</item>
-        <item name="android:shadowDy">2</item>
-    </style>
-
-    <style name="ShadowAuthText">
-        <item name="android:shadowColor">#CC000000</item>
-        <item name="android:shadowRadius">2</item>
-        <item name="android:shadowDx">0</item>
-        <item name="android:shadowDy">-2</item>
-    </style>
-
-    <style name="ShadowBlackSolidText">
-        <item name="android:shadowColor">#000000</item>
-        <item name="android:shadowRadius">1</item>
-        <item name="android:shadowDx">0</item>
-        <item name="android:shadowDy">-1</item>
-    </style>
-
-    <style name="ShadowDatingButtons">
-        <item name="android:shadowColor">#666666</item>
-        <item name="android:shadowDx">1</item>
-        <item name="android:shadowDy">1</item>
-        <item name="android:shadowRadius">1.2</item>
-    </style>
-
-    <style name="ShadowGrayBottom">
-        <item name="android:shadowColor">#646464</item>
-        <item name="android:shadowDx">0</item>
-        <item name="android:shadowDy">1</item>
-        <item name="android:shadowRadius">1</item>
-    </style>
-
-    <style name="ShadowBlackTop">
-        <item name="android:shadowColor">#000000</item>
-        <item name="android:shadowDx">0</item>
-        <item name="android:shadowDy">-1</item>
-        <item name="android:shadowRadius">1</item>
-    </style>
-
-    <style name="ShadowBlackBottom">
-        <item name="android:shadowColor">#000000</item>
-        <item name="android:shadowDx">0</item>
-        <item name="android:shadowDy">1</item>
-        <item name="android:shadowRadius">1</item>
-    </style>
-
-    <style name="BackgroundText" parent='NoShadowItemFont'>
+    <style name="BackgroundText">
         <item name="android:textColor">#2F2F2F</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">normal</item>
     </style>
 
-    <style name="BackgroundTitleText" parent='NoShadowItemFont'>
+    <style name="BackgroundTitleText">
         <item name="android:textColor">#2F2F2F</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="BackgroundFormTitleText" parent='NoShadowItemFont'>
+    <style name="BackgroundFormTitleText">
         <item name="android:tag">tvTitle</item>
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -199,7 +115,7 @@
         <item name="android:textSize">14sp</item>
     </style>
 
-    <style name="ItemTitleText" parent="NoShadowItemFont">
+    <style name="ItemTitleText">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">normal</item>
@@ -244,52 +160,52 @@
         <item name="android:textColor">#9FCCF3</item>
     </style>
 
-    <style name="ItemtText" parent="NoShadowItemFont">
+    <style name="ItemtText">
         <item name="android:textColor">#B8B8B8</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">normal</item>
     </style>
 
-    <style name="ItemWhiteText" parent="NoShadowItemFont">
+    <style name="ItemWhiteText">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">normal</item>
     </style>
 
-    <style name="DatingButtonsText" parent="NoShadowItemFont">
+    <style name="DatingButtonsText">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">9sp</item>
         <item name="android:singleLine">true</item>
         <item name="android:textScaleX">0.9</item>
     </style>
 
-    <style name="ProfileButtonsText" parent="NoShadowItemFont">
+    <style name="ProfileButtonsText">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">10sp</item>
         <item name="android:singleLine">true</item>
         <item name="android:textScaleX">0.9</item>
     </style>
 
-    <style name="ButtonsText" parent="NoShadowItemFont">
+    <style name="ButtonsText">
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
-    <style name="AuthButtonsVerySmallText" parent="NoShadowItemFont">
+    <style name="AuthButtonsVerySmallText">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">10sp</item>
     </style>
 
-    <style name="AuthButtonsSmallText" parent="NoShadowItemFont">
+    <style name="AuthButtonsSmallText">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">12sp</item>
     </style>
 
-    <style name="AuthButtonsText" parent="NoShadowItemFont">
+    <style name="AuthButtonsText">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">14sp</item>
     </style>
 
-    <style name="AuthButtonsBigText" parent="NoShadowItemFont">
+    <style name="AuthButtonsBigText">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">16sp</item>
     </style>
@@ -303,12 +219,12 @@
         <item name="android:drawablePadding">8dp</item>
     </style>
 
-    <style name="RecoveryButtonsBigText" parent="NoShadowItemFont">
+    <style name="RecoveryButtonsBigText">
         <item name="android:textColor">@color/btn_signin</item>
         <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="NotificationText" parent="NoShadowItemFont">
+    <style name="NotificationText">
         <item name="android:textSize">9sp</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
@@ -318,7 +234,7 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="LeftMenuButtons" parent="NoShadowItemFont">
+    <style name="LeftMenuButtons">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/left_menu_text</item>
@@ -348,12 +264,7 @@
         <item name="android:text">@string/general_dialog_saving</item>
     </style>
 
-    <style name="BackgroundFont" parent="NoShadowItemFont">
-        <item name="android:textColor">#737373</item>
-        <item name="android:textSize">16sp</item>
-    </style>
-
-    <style name="BackgroundFontShadowless" parent="Shadowless">
+    <style name="BackgroundFont">
         <item name="android:textColor">#737373</item>
         <item name="android:textSize">16sp</item>
     </style>
@@ -388,7 +299,6 @@
         <item name="android:textColor">@color/list_text_gray</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:shadowRadius">0</item>
     </style>
 
     <style name="ListItemEmptyText.Bold">
@@ -405,19 +315,14 @@
         <item name="android:layout_marginRight">10dp</item>
     </style>
 
-    <style name="Shadowless">
-        <item name="android:shadowColor">@null</item>
-        <item name="android:shadowRadius">0</item>
-    </style>
-
-    <style name="ListTime" parent="NoShadowItemFont">
+    <style name="ListTime">
         <item name="android:gravity">right|center_vertical</item>
         <item name="android:textColor">@color/list_time</item>
         <item name="android:textSize">10sp</item>
         <item name="android:textStyle">normal</item>
     </style>
 
-    <style name="ListMessageText" parent="NoShadowItemFont">
+    <style name="ListMessageText">
         <item name="android:singleLine">true</item>
         <item name="android:ellipsize">end</item>
         <item name="android:textColor">@color/list_text_gray</item>
@@ -425,7 +330,7 @@
         <item name="android:textStyle">normal</item>
     </style>
 
-    <style name="ListUnreadCounter" parent="NoShadowItemFont">
+    <style name="ListUnreadCounter">
         <item name="android:layout_width">16dp</item>
         <item name="android:layout_height">16dp</item>
         <item name="android:background">@drawable/ico_message_bg</item>
@@ -436,7 +341,7 @@
         <item name="android:layout_marginLeft">6dp</item>
     </style>
 
-    <style name="ListCity" parent="NoShadowItemFont">
+    <style name="ListCity">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:singleLine">true</item>
@@ -446,7 +351,7 @@
         <item name="android:textColor">@color/list_text_gray</item>
     </style>
 
-    <style name="ListName" parent="NoShadowItemFont">
+    <style name="ListName">
         <item name="android:drawablePadding">6dp</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">normal</item>
@@ -455,7 +360,7 @@
         <item name="android:maxWidth">190dp</item>
     </style>
 
-    <style name="WhiteHeader" parent="NoShadowItemFont">
+    <style name="WhiteHeader">
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
@@ -519,7 +424,7 @@
         <item name="android:gravity">center_horizontal</item>
     </style>
 
-    <style name="Informer" parent="NoShadowItemFont">
+    <style name="Informer">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginRight">15dp</item>
@@ -544,7 +449,7 @@
         <item name="android:background">@drawable/bg_message_friend</item>
     </style>
 
-    <style name="ChatMessage" parent="NoShadowItemFont">
+    <style name="ChatMessage">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center_vertical|left</item>
@@ -569,7 +474,7 @@
     </style>
 
 
-    <style name="ChatDate" parent="NoShadowItemFont">
+    <style name="ChatDate">
         <item name="android:textColor">#A7A7A7</item>
         <item name="android:textSize">11sp</item>
         <item name="android:layout_width">wrap_content</item>
@@ -597,7 +502,7 @@
         <item name="android:background">@drawable/bg_chat_image_holo</item>
     </style>
 
-    <style name="ChatImage.Map" parent="NoShadowItemFont">
+    <style name="ChatImage.Map">
         <item name="android:layout_width">146dp</item>
         <item name="android:layout_height">100dp</item>
     </style>
@@ -654,7 +559,7 @@
         <item name="android:layout_marginRight">6dp</item>
     </style>
 
-    <style name="TopfaceTextAppearance" parent="NoShadowItemFont">
+    <style name="TopfaceTextAppearance">
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
@@ -670,7 +575,7 @@
         <item name="android:textSize">12sp</item>
     </style>
 
-    <style name="LikeRequestButton" parent="NoShadowItemFont">
+    <style name="LikeRequestButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:backgroundDimEnabled">true</item>
@@ -738,7 +643,7 @@
         <item name="android:maxWidth">90dp</item>
     </style>
 
-    <style name="RedAlertTextView" parent="NoShadowItemFont">
+    <style name="RedAlertTextView">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
@@ -746,7 +651,7 @@
         <item name="android:layout_alignParentTop">true</item>
     </style>
 
-    <style name="ChatButtonsText" parent='NoShadowItemFont'>
+    <style name="ChatButtonsText">
         <item name="android:paddingBottom">8dp</item>
         <item name="android:gravity">center_horizontal|bottom</item>
         <item name="android:textColor">@color/color_chat_btn_text</item>
@@ -754,7 +659,7 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="ChatVipTitleText" parent="NoShadowItemFont">
+    <style name="ChatVipTitleText">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">12sp</item>
     </style>
@@ -769,7 +674,7 @@
         <item name="android:background">@drawable/btn_gray_selector</item>
     </style>
 
-    <style name="Widget.Topface.Button.Big" parent="NoShadowItemFont">
+    <style name="Widget.Topface.Button.Big">
         <item name="android:minHeight">50dp</item>
         <item name="android:paddingLeft">15dp</item>
         <item name="android:paddingRight">15dp</item>
@@ -780,7 +685,7 @@
         <item name="android:gravity">center</item>
     </style>
 
-    <style name="Widget.Topface.Button" parent="NoShadowItemFont">
+    <style name="Widget.Topface.Button">
         <item name="android:minHeight">32dp</item>
         <item name="android:paddingLeft">15dp</item>
         <item name="android:paddingRight">15dp</item>
@@ -790,6 +695,9 @@
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
     </style>
+
+    // наследуются стили Widget
+    <style name="Widget.Topface"></style>
 
     <style name="Widget.Topface.Button.Big.Gray" parent="Widget.Topface.Button.Big">
         <item name="android:background">@drawable/btn_gray_selector</item>
@@ -830,7 +738,7 @@
         <item name="android:gravity">center</item>
     </style>
 
-    <style name="TabIndicatorHoloStyle" parent="NoShadowItemFont">
+    <style name="TabIndicatorHoloStyle">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:gravity">center</item>
@@ -892,7 +800,7 @@
         <item name="android:dividerHeight">@dimen/filter_fragment_divider_height</item>
     </style>
 
-    <style name="SpinnerTextView" parent="NoShadowItemFont">
+    <style name="SpinnerTextView">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center_vertical</item>
